# chattalkie-tauri

./: .gitignore  docker-compose.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
backend/src/main/resources/: application.conf  logback.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tauri-client/: index.html  package-lock.json  package.json  vite.config.ts
tauri-client/src/: App.tsx  index.css  main.tsx
tauri-client/src-tauri/: Cargo.toml  build.rs  run-chattalkie.sh  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/src/: lib.rs
tauri-client/src/api/: client.ts
tauri-client/src/assets/styles/: reset.css  variables.css
tauri-client/src/components/: ErrorBoundary.tsx
tauri-client/src/components/auth/: Auth.css  LoginScreen.tsx  RegisterScreen.tsx
tauri-client/src/components/call/: CallPage.css  CallPage.tsx
tauri-client/src/components/chat/: AddFriendModal.css  AddFriendModal.tsx  CallBar.css  CallBar.tsx  CallModal.css  CallModal.tsx  ChatBubble.css  ChatBubble.tsx  ChatInterface.css  ChatInterface.tsx  (+18 more)
tauri-client/src/db/: db.ts
tauri-client/src/hooks/: useAuth.ts  useCallStore.ts  usePresenceStore.ts  useQueries.ts  useSettings.ts  useSocket.ts  useWebRTC.ts
tauri-client/src/lib/: media-utils.ts
tauri-client/src/services/: authService.ts  groupService.ts  syncService.ts  userService.ts
tauri-client/src/utils/: externalCall.ts  normalizeMessage.ts  uiUtils.ts
(+119 files in other folders)
